Uploaded 1024 base layout

--- a/index.html
+++ b/index.html
@@ -31,21 +31,17 @@
     <main>
         <section class="articles">
             <article>
-                <img src="" alt="image1">
-                <h3>Blogotitle of blogopost about blogoflowers</h3>
+                <img src="images/image1.png" alt="image1" class="image">
+                <a href="#"><h3>Blogotitle of blogopost about blogoflowers</h3></a>
                 <div class="details">
-                    <div class="author">
+                    <div class="author-info">
                         <div>
-                            <div>
-                                <!-- logo -->
-                            </div>
+                            <div class="time"></div>
                             <span>22:58 Jan 01, 2014</span>
                         </div>
                         <div>
-                            <div>
-                                <!-- logo2 -->
-                            </div>
-                            <span>by E. Hyperraccon</span>
+                            <div class="author"></div>
+                            <span>by <a href="#">E. Hyperraccon</a></span>
                         </div>
                     </div>
                     <div class="publishing">
@@ -63,21 +59,17 @@
                     non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </article>
             <article>
-                <img src="" alt="image2">
-                <h3>Blogotitle about colorful shit</h3>
+                <img src="images/image2.png" alt="image2">
+                <a href="#"><h3>Blogotitle about colorful shit</h3></a>
                 <div class="details">
-                    <div class="author">
+                    <div class="author-info">
                         <div>
-                            <div>
-                                <!-- logo -->
-                            </div>
+                            <div class="time"></div>
                             <span>22:50 Jan 01, 2014</span>
                         </div>
                         <div>
-                            <div>
-                                <!-- logo2 -->
-                            </div>
-                            <span>by E. Hyperraccon</span>
+                            <div class="author"></div>
+                            <span>by <a href="#">E. Hyperraccon</a></span>
                         </div>
                     </div>
                     <div class="publishing">
