Added social icons

--- a/index.html
+++ b/index.html
@@ -190,11 +190,11 @@
                     </div>
                 </div>
                 <div class="publishing">
-                    <button class="facebook"><i class="demo-icon icon-facebook"></i>16</button>
-                    <button class="google"><i class="demo-icon icon-gplus"></i>7</button>
-                    <button class="twitter"><i class="demo-icon icon-twitter"></i>15</button>
-                    <button class="vk"><i class="demo-icon icon-vk"></i>16</button>
-                    <button class="yandex"><i class="demo-icon icon-yandex"></i>1</button>
+                    <button class="facebook">16</button>
+                    <button class="google">7</button>
+                    <button class="twitter">15</button>
+                    <button class="vk">16</button>
+                    <button class="yandex">1</button>
                 </div>
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
@@ -220,11 +220,11 @@
                     </div>
                 </div>
                 <div class="publishing">
-                    <button class="facebook"><i class="demo-icon icon-facebook"></i>16</button>
-                    <button class="google"><i class="demo-icon icon-gplus"></i>7</button>
-                    <button class="twitter"><i class="demo-icon icon-twitter"></i>15</button>
-                    <button class="vk"><i class="demo-icon icon-vk"></i>16</button>
-                    <button class="yandex"><i class="demo-icon icon-yandex"></i>1</button>
+                    <button class="facebook">16</button>
+                    <button class="google">7</button>
+                    <button class="twitter">15</button>
+                    <button class="vk">16</button>
+                    <button class="yandex">1</button>
                 </div>
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
@@ -250,11 +250,11 @@
                     </div>
                 </div>
                 <div class="publishing">
-                    <button class="facebook"><i class="demo-icon icon-facebook"></i>16</button>
-                    <button class="google"><i class="demo-icon icon-gplus"></i>7</button>
-                    <button class="twitter"><i class="demo-icon icon-twitter"></i>15</button>
-                    <button class="vk"><i class="demo-icon icon-vk"></i>16</button>
-                    <button class="yandex"><i class="demo-icon icon-yandex"></i>1</button>
+                    <button type="button" class="facebook">16</button>
+                    <button class="google">7</button>
+                    <button class="twitter">15</button>
+                    <button class="vk">16</button>
+                    <button class="yandex">1</button>
                 </div>
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
